# faubla-ultima-item-generator

./: .gitignore  CMakeLists.txt  README.md  editplayerdialogue.cpp  editplayerdialogue.h  editplayerdialogue.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
config/: config.xml
data/basic/: Basic_Accessory_Qualities.json  Basic_Armor_Qualities.json  Basic_Armor_Shield.json  Basic_Weapon_Qualities.json
docs/: .clang-uml
docs/diagrams/: AccessoryGenerator_diagram.puml  Accessory_diagram.puml  AppController_diagram.puml  ArmorGenerator_diagram.puml  Armor_diagram.puml  AttributeEnum_diagram.puml  CampaignManager_diagram.puml  GeneratorStrategy_diagram.puml  ItemGeneratorSystem_diagram.puml  Item_diagram.puml  JsonReader_diagram.puml  Player_diagram.puml  QualityGenerator_diagram.puml  Quality_diagram.puml  Test_diagram.puml  WeaponGenerator_diagram.puml  Weapon_diagram.puml  core_diagram.puml  example_class_diagram.puml  gui+conv_diagram.puml  gui_extended_diagram.puml  io_diagram.puml  main_all_diagram.vpp  main_all_diagram.vpp.bak_000f  main_all_diagram.vpp.vbak  main_diagram.puml  main_diagram2.puml  main_diagram3.puml  models_diagram.puml  systems_diagram.puml  untitled.vpp  untitled.vpp.bak_000f
fultima-gen/: CMakeLists.txt
fultima-gen/data/basic/: Basic_Armor_Shield.json  Basic_Qualities.json  Basic_Weapons.json
fultima-gen/include/: Weapon.h
fultima-gen/src/: Accessory.cpp  Item.cpp  Weapon.cpp
fultima_gen/: Accessory.h  Armor.cpp  Armor.h  Enums.h  Generator.h  Item.cpp  Item.h  Player.cpp  Player.h  Tests.cpp  Weapon.cpp  Weapon.h  fultima_gen.sln  fultima_gen.vcxproj  fultima_gen.vcxproj.filters  resource.h
fultima_gen/basic_items/: Basic_Armor_Shield.json
fultima_gen/include/: Accessory.h  Armor.h  Item.h  Weapon.h
fultima_gen/json_files/basic/: Basic_Weapons.json
fultima_gen/src/: Accessory.cpp  Armor.cpp  Item.cpp  Weapon.cpp
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/dialogue/addplayer/: addplayerdialogue.cpp  addplayerdialogue.h  addplayerdialogue.ui
gui/dialogue/editplayer/: editplayerdialogue.cpp  editplayerdialogue.h  editplayerdialogue.ui
gui/dialogue/itemgen/: itemgendialogue.cpp  itemgendialogue.h  itemgendialogue.ui
gui/models/: ItemModel.cpp  ItemModel.h  MyItemTableModel.cpp  MyItemTableModel.h  MyPlayerTableModel.cpp  MyPlayerTableModel.h
include/: Armor.h  AttributeEnum.h  Generator.h  Item.h  Player.h  Weapon.h
src/: Armor.cpp  Generator.cpp  Item.cpp  Player.cpp  Weapon.cpp
src/controllers/: AppController.cpp  AppController.h
src/converters/: AttributeConverter.h  ItemTypeConverter.h  WeaponTypeConverter.h
src/core/: CampaignManager.cpp  CampaignManager.h
src/io/: CampaignSerializer.cpp  CampaignSerializer.h  JsonReader.cpp  JsonReader.h
src/models/: Accessory.cpp  Accessory.h  Armor.cpp  Armor.h  AttributeEnum.h  IJsonSerializable.h  Item.cpp  Item.h  Player.cpp  Player.h  Quality.h  Weapon.cpp  Weapon.h
src/systems/: AccessoryGenerator.cpp  AccessoryGenerator.h  ArmorGenerator.cpp  ArmorGenerator.h  GeneratorStrategy.h  ItemGeneratorSystem.cpp  ItemGeneratorSystem.h  QualityGenerator.cpp  QualityGenerator.h  WeaponGenerator.cpp  WeaponGenerator.h
src/tests/: Test.cpp  Test.h
